# filesaver

./: README.md  TUTORIAL.md  pyproject.toml
filesaver/: cli.py
filesaver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
