[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "filesaver"
version = "0.1.0"
description = "Git in plain English — save, undo, switch storylines"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
filesaver = "filesaver.cli:main"

[tool.setuptools.packages.find]
where = ["."]
